solve stretch problems

--- a/css/less/index.css
+++ b/css/less/index.css
@@ -162,6 +162,12 @@ header {
   margin-bottom: 20px;
   display: flex;
 }
+@media (max-width: 400px) {
+  header {
+    flex-wrap: wrap;
+    height: 100%;
+  }
+}
 header nav {
   width: 80%;
   height: 100%;
@@ -180,6 +186,8 @@ header nav {
 @media (max-width: 400px) {
   header nav {
     background: orange;
+    height: 50px;
+    width: 100%;
   }
 }
 header .logo {
@@ -199,6 +207,11 @@ header .logo {
     background: purple;
   }
 }
+@media (max-width: 400px) {
+  header .logo {
+    order: -1;
+  }
+}
 .content {
   margin-top: 20px;
   width: 100%;
@@ -207,6 +220,11 @@ header .logo {
   display: flex;
   flex-flow: wrap;
   justify-content: space-evenly;
+}
+@media (max-width: 768px) {
+  .content {
+    height: 100%;
+  }
 }
 .content .boxes {
   width: 45%;
@@ -224,6 +242,11 @@ header .logo {
     background: green;
   }
 }
+@media (max-width: 768px) {
+  .content .box1 {
+    width: 100%;
+  }
+}
 @media (max-width: 400px) {
   .content .box1 {
     background: orange;
@@ -232,16 +255,23 @@ header .logo {
 @media (max-width: 768px) {
   .content .box2 {
     background: purple;
+    width: 100%;
   }
 }
 @media (max-width: 768px) {
   .content .box3 {
     background: purple;
+    width: 100%;
   }
 }
 @media (max-width: 1100px) {
   .content .box4 {
     background: green;
+  }
+}
+@media (max-width: 768px) {
+  .content .box4 {
+    width: 100%;
   }
 }
 @media (max-width: 400px) {
